<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content" >


    <TextView
        android:layout_width="395dp"
        android:padding="15dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/share_publication"
        android:textColor="@android:color/white"
        android:background="@color/blue"
        android:id="@+id/textView20" />

    <RadioGroup
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/button2">

        <RadioButton
            android:layout_marginBottom="10dp"
            android:id="@+id/radioButton1"
            android:checked="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_facebook" />

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_socialway"
            android:id="@+id/radioButton2"/>


    </RadioGroup>


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="OK"
        android:background="@color/blueLight"
        android:textColor="@android:color/white"
        android:id="@+id/buttonOK" />


</LinearLayout>