<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/select_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:background="@color/blue"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"
                    android:gravity="center_vertical"
                    android:text="@string/add_images"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white" />


                <com.caminosantiago.socialway.views.TextViewAwesome
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical"
                    android:text="@string/fa_plus"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layoutImages1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewPost1"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/imageViewPost2"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/imageViewPost3"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutImages2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewPost4"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/imageViewPost5"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop" />

                <ImageView
                    android:id="@+id/imageViewPost6"
                    android:layout_width="0dp"
                    android:layout_height="85dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop" />

            </LinearLayout>


            <EditText
                android:id="@+id/editTextDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:gravity="top"
                android:hint="@string/descipcion"
                android:lines="4"
                android:maxLength="500"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/gris_oscuro" />


            <fragment
                android:id="@+id/map"
                android:name="com.caminosantiago.socialway.loadPublication.ScrollMap"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:id="@+id/layoutAddLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/blue"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"
                    android:gravity="center_vertical"
                    android:text="@string/add_location"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white" />


                <com.caminosantiago.socialway.views.TextViewAwesome
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_vertical"
                    android:text="@string/fa_plus"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@android:color/white" />

            </LinearLayout>


            <Button
                android:id="@+id/buttonSendPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:background="@color/blue"
                android:text="Enviar"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>